PathConstraints restructure